[metadata]
name = mcbootflash
version = 1.0.0
description-file = README.md
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = mcbootflash
install_requires =
    pyserial
    intelhex

[options.entry_points]
console_scripts =
    mcbootflash = mcbootflash.flash:flash

[coverage:report]
exclude_lines =
    if __name__ == .__main__.:

