[metadata]
name = mcbootflash
version = 1.0.0
description = Flash firmware to 16-bit Microchip devices.
description_file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
author = Alexander Bessman
author_email = alexander.bessman@gmail.com
url = https://github.com/bessman/mcbootflash
keywords =
    firmware
    flashing
    bootloader
    serial
    uart
    microchip
    pic24
    dspic33
    16-bit

[options]
packages = mcbootflash
install_requires =
    pyserial
    intelhex

[options.entry_points]
console_scripts =
    mcbootflash = mcbootflash.flash:flash

[coverage:report]
exclude_lines =
    if __name__ == .__main__.:

